--- a/sass/components/_suggestion-box.scss
+++ b/sass/components/_suggestion-box.scss
@@ -8,21 +8,20 @@
 
 %reset { margin: 0; padding: 0; }
 %flex { display: flex; justify-content: center;	align-items: center; }
- 
-@mixin animated($timein: null, $delay: null) { 
+
+@mixin animated($timein: null, $delay: null) {
  transition: all $timein ease-in-out;
-  transition-delay: $delay; 
+  transition-delay: $delay;
 }
 
 @mixin dimensions($width: null, $height: null) { width: $width; min-height: $height; }
 
-   
-.content{
 
-  position: relative; 
+.content{
+  position: relative;
   margin-top: 4em;
   animation: animatop 0.9s  cubic-bezier(0.425, 1.140, 0.470, 1.125) forwards ;
-  
+
 }
 
 .card{
@@ -32,6 +31,9 @@
   box-shadow: 0px 10px 20px rgba(0,0,0,0.2);
   position: relative;
   overflow: hidden;
+  display: flex;
+  flex-flow: row;
+  padding: 1em 0;
   &:hover {
     opacity: 0.8;
   }
@@ -41,25 +43,25 @@
       width: 190px;
       height: 300px;
       background: $color-primary-light;
-      
+
       position: absolute;
       animation: rotatemagic 0.75s cubic-bezier(0.425, 1.040, 0.470, 1.105) 1s both;
   }
-  
+
 }
 
   .badgescard{
     border-radius: 3px;
     background-color: $color-white;
-    width: 80%; 
+    width: 80%;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
     position: absolute;
-    z-index: -1; 
-    left: 45px; 
+    z-index: -1;
+    left: 45px;
     bottom: 10px;
-    @extend %flex; 
+    @extend %flex;
     animation: animainfos 0.5s cubic-bezier(0.425, 1.040, 0.470, 1.105) 0.75s forwards;
-    
+
     span {
     font-size: 1.6em;
     margin: 0px 6px;
@@ -71,16 +73,17 @@
       margin: 0px 6px;
       opacity: 0.6;
     }
-  }   
+  }
 
 .firstinfo{
   @extend %flex;
-  flex-direction: row;  
+  flex-direction: row;
   z-index:2;
   position: relative;
   margin-right: 30px;
+  margin-left: 1em;
 
-  img{ 
+  img{
     align-self: flex-start;
     margin-right: 3em;
     justify-self: flex-start;
@@ -88,31 +91,45 @@
     width: 120px;
     height: 120px;
   }
-  .profileinfo{
-    
+  .profileinfo {
+    display: flex;
+    flex-flow: column;
+    padding: 1em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2; /* number of lines to show */
+    line-height: 16px;        /* fallback */
+    max-height: 150px;       /* fallback */
     h1{ font-size: 1.8em;}
     h3{ font-size: 1.2em;
         color: $color-primary-light;
         font-style: italic;
+        margin: 0.5em 0;
     }
     p.bio{
+      font-size: 1.2em;
       color: #5A5A5A;
       line-height: 1.2;
       font-style: initial;
-    }  
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
   }
 }
 
 
 @keyframes animatop{
-  0%{ 
+  0%{
     opacity: 0;
     bottom: -500px;}
-  100%{  
-   opacity: 1;  
+  100%{
+   opacity: 1;
   bottom: 0px;}
 }
- 
+
 @keyframes animainfos{
   0%{
     bottom:  10px;}
@@ -128,7 +145,7 @@
     left: -253px;
   }
   100%{
-    
+
     transform: rotate(-30deg);
     top: -24px;
     left: -78px;
